[metadata]
name = RandAugment3d
version = 0.0.4.1-dev
description = Implementation of RandAugment in 3D
long_description = file: README.md
long_description_content_type = text/markdown
author = Julian Klug
author_email = tensu.wave@gmail.com
url = https://github.com/JulianKlug/RandAugment-3D

keywords =
    randaugment
    data-augmentation
    volume

provides = RandAugment3d

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    scikit-image
    tensorflow
    numpy
    monai

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click
